# blender-llm-assistant

./: .gitignore  README.md  TEST_COVERAGE.md  package_addon.py
addon/: __init__.py  blender_manifest.toml  requirements.txt  server.py
addon/tools/: __init__.py  curve_ops.py  material.py  mesh_edit.py  object_ops.py  scene.py  uv_ops.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  blender_client.py  main.py  tools.py
tests/: README.md  conftest.py  diagnose.py  requirements-test.txt  test_http_api.py  test_mcp_server.py
